fixed positioning with content center aligned

--- a/qr-code-component-main/design/style.css
+++ b/qr-code-component-main/design/style.css
@@ -11,12 +11,19 @@ body{
     font-family: 'Outfit', sans-serif;
     color: var(--darkBlue);
     background-color: var(--lightgray);
+    min-height: 100vh;
     text-align: center;
     display: flex;
     justify-content: center;
 }
 
 .container{
+    margin: auto;
+    align-items: center;
+    max-width: 330px;
+}
+
+.card{
     padding: 12px;
     display: flex;
     flex-direction: column;
@@ -28,7 +35,7 @@ body{
     box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
 }
 
-.container img{
+.card img{
     width: 250px;
     height: 250px;
     border-radius: 10px;
